src/objects/Zendesk__Zendesk_Ticket__c.object
<CustomObject>
    <description>Custom object to store Zendesk Support tickets (mostly closed ones) on salesforce</description>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <label>Account Safe ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Territory_Owner__c</fullName>
        <formula>Zendesk__Organization__r.Territory_Owner_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Email__c</fullName>
        <description>A concatenated version of the Assignee&apos;s email address to be used in an email template for the Sales team (the assignees are people who are on the support team and so are not in Salesforce).</description>
        <formula>(LEFT(Zendesk__Assignee_Name__c, FIND( &quot; &quot;, Zendesk__Assignee_Name__c ) -1 ))
&amp; &quot;.&quot;
&amp;(RIGHT(Zendesk__Assignee_Name__c, LEN(Zendesk__Assignee_Name__c) - FIND(&quot; &quot;, Zendesk__Assignee_Name__c))) 
&amp;&quot;@turbonomic.com&quot;</formula>
        <label>Assignee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Email_for_WFR__c</fullName>
        <description>A Copy of the Assignee email to be used in a WFR (Zendesk Ticket Notification)</description>
        <label>Assignee Email for WFR</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bug_Number__c</fullName>
        <label>Bug #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bug_test__c</fullName>
        <label>Bug test</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller_Components__c</fullName>
        <label>Controller Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tier__c</fullName>
        <label>Customer Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Severity__c</fullName>
        <label>EA Severity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Version_Number__c</fullName>
        <label>EA Version Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Request_type__c</fullName>
        <label>ER Request type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Severity__c</fullName>
        <label>ER Severity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Use_Case__c</fullName>
        <label>ER Use Case</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Components__c</fullName>
        <label>External Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Components__c</fullName>
        <label>Foundation Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Components__c</fullName>
        <label>Knowledge Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Ticket__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (Ticket)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Owner__c</fullName>
        <description>The Account (Organization) Owner</description>
        <formula>Zendesk__Organization__r.Owner.Full_Name__c</formula>
        <label>Organization Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solved_with_KB__c</fullName>
        <label>Solved with KB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Email__c</fullName>
        <formula>Zendesk__Organization__r.AE_Rep__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Email_for_WF__c</fullName>
        <label>Territory Owner Email for WF</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VMT_Version__c</fullName>
        <label>VMT Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMT_Version_update__c</fullName>
        <label>VMT Version update</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Agent_Wait_Time_Business__c</fullName>
        <label>Agent wait time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Agent_Wait_Time_Calendar__c</fullName>
        <inlineHelpText>In miutes</inlineHelpText>
        <label>Agent wait time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Assignee_Name__c</fullName>
        <label>Assignee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Custom_Date_Only__c</fullName>
        <label>Custom Date Only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zendesk__Custom_Field_1__c</fullName>
        <label>Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_created__c</fullName>
        <label>Date/Time created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_initially_assigned__c</fullName>
        <label>Date/Time initially assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_solved__c</fullName>
        <label>Date/Time solved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Date_Time_updated__c</fullName>
        <label>Date/Time updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__DomainUniqueTicketId__c</fullName>
        <label>Domain Unique Ticket Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zendesk__Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Hold_Time_Business__c</fullName>
        <label>Hold time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Hold_Time_Calendar__c</fullName>
        <inlineHelpText>In minutes</inlineHelpText>
        <label>Hold time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Lead_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester (Lead)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Zendesk Support Tickets</relationshipLabel>
        <relationshipName>Zendesk_Support_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Zendesk Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Zendesk Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Reply_Time_Business__c</fullName>
        <label>Reply time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Reply_Time_Calendar__c</fullName>
        <inlineHelpText>In minutes</inlineHelpText>
        <label>Reply time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequesterEmailAddress__c</fullName>
        <description>When Accounts/Contacts are not created through the creation of a Ticket from Zendesk, this field will be populated.</description>
        <label>Requester Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequesterName__c</fullName>
        <description>When Accounts/Contacts are not created through the creation of a Ticket from Zendesk Support, this field will be populated.</description>
        <label>Requester Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__RequesterOrganization__c</fullName>
        <description>When Accounts/Contacts are not created through the creation of a ticket from Zendesk Support, this field will be populated.</description>
        <label>Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Requester_Wait_Time_Business__c</fullName>
        <label>Requester wait time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Requester_Wait_Time_Calendar__c</fullName>
        <label>Requester wait time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zendesk Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_time_business__c</fullName>
        <label>Resolution time (business)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_time_calendar__c</fullName>
        <inlineHelpText>In minutes</inlineHelpText>
        <label>Resolution time (calendar)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
                <value>
                    <fullName>Solved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Test_field_2__c</fullName>
        <label>Test field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_Form_Id__c</fullName>
        <label>Ticket Form Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_Form_Name__c</fullName>
        <label>Ticket Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_ID__c</fullName>
        <description>Stores Zendesk Support Ticket Id</description>
        <externalId>true</externalId>
        <label>Ticket ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Ticket_Origin__c</fullName>
        <label>Ticket Origin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zendesk__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskDomain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The domain to which the ticket belongs to. Used when multiple domains are enabled for the organization</description>
        <label>Zendesk Domain</label>
        <referenceTo>Zendesk__Zendesk_Domain__c</referenceTo>
        <relationshipLabel>Zendesk Support Tickets</relationshipLabel>
        <relationshipName>Zendesk_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zendesk Support Ticket</label>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Zendesk__Status__c</columns>
        <columns>Bug__c</columns>
        <columns>Bug_Number__c</columns>
        <columns>Zendesk__Assignee_Name__c</columns>
        <columns>Zendesk__Date_Time_created__c</columns>
        <columns>Zendesk__Date_Time_updated__c</columns>
        <columns>Zendesk__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>5/30/2019 12:00 AM</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Zendesk__All</fullName>
        <columns>NAME</columns>
        <columns>Zendesk__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Zendesk__Description__c</columns>
        <columns>Zendesk__Requester__c</columns>
        <columns>Zendesk__ZendeskDomain__c</columns>
        <columns>Zendesk__Organization__c</columns>
        <columns>Bug__c</columns>
        <columns>Bug_Number__c</columns>
        <columns>Zendesk__Date_Time_created__c</columns>
        <columns>ER_Severity__c</columns>
        <columns>ER_Use_Case__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Zendesk__Date_Time_updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zendesk__Status__c</field>
            <operation>equals</operation>
            <value>Open,Pending,On-hold</value>
        </filters>
        <label>DXC</label>
    </listViews>
    <nameField>
        <label>Zendesk Support Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>